# TrackMini

./: .gitignore  README.md  justfile  pyproject.toml
src/: boost.py  camera.py  car.py  car_dynamics.py  car_racing.py  engine.py  gui.py  main.py  material.py  obstacle.py  physic_object.py  playground.py  playground_pyglet.py  road.py  utils.py
